MyCraNickname v1.0.0 : Bug fixed.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -31,3 +31,5 @@ permissions:
     children:
       nickname.self: true
       nickname.other: true
+      nickname.list: true
+      nickname.reload: true
